--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>HTML Template Demo</title>
-    <meta charset="UTF-8" />
-  </head>
-  <body>
-    <template id="sticky-note-template">
-      <div id="sticky-note-container" class="sticky-note-container">
-        <p class="sticky-note-text">Note content placeholder</p>
-      </div>
-    </template>
-    <button id="generate-sticky-note">Generate new sticky note</button>
-    <script src="src/index.js"></script>
-  </body>
+    <head>
+        <title>HTML Template Demo</title>
+        <meta charset="UTF-8" />
+    </head>
+    <body>
+        <template id="sticky-note-template">
+            <link rel="stylesheet" href="./src/stickyNote.css" />
+            <div id="sticky-note-container" class="sticky-note-container">
+                <p class="sticky-note-text">Note content placeholder</p>
+            </div>
+        </template>
+        <button id="generate-sticky-note">Generate new sticky note</button>
+        <script src="src/index.js"></script>
+    </body>
 </html>
-
