encapsulate the template style

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   </head>
   <body>
     <template id="sticky-note-template">
+      <link rel="stylesheet" href="./src/stickyNote.css">
       <div id="sticky-note-container" class="sticky-note-container">
         <p class="sticky-note-text">Note content placeholder</p>
       </div>
@@ -14,4 +15,3 @@
     <script src="src/index.js"></script>
   </body>
 </html>
-
