--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
         <meta charset="UTF-8" />
     </head>
     <body>
+        <!-- The <template> tag, the element is not rendered when the page loads -->
         <template id="sticky-note-template">
             <link rel="stylesheet" href="./src/stickyNote.css" />
             <div id="sticky-note-container" class="sticky-note-container">
                 <p class="sticky-note-text">Note content placeholder</p>
             </div>
         </template>
+        <!-- End of <template> -->
         <button id="generate-sticky-note">Generate new sticky note</button>
         <script src="src/index.js"></script>
     </body>
